templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: client-route
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: my-chart-release
    meta.helm.sh/release-namespace: training
spec:
  to:
    kind: Service
    name: client-service
  port:
    targetPort: 80
  tls:
    termination: edge
    secretName: my-tls-secret
    insecureEdgeTerminationPolicy: Redirect
